Change R to R_m in \XR

--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.13 2009/09/18 17:45:49 ith Exp $
+% $Id: ihmacros.sty,v 1.14 2009/09/27 12:22:37 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -72,7 +72,7 @@
 \newcommand{\Z}[2]{\vect{Z}_{{#1}{#2}}}
 % 
 % Maths from Paper 2
-\newcommand{\XR}{Z\dot{R}^2}
+\newcommand{\XR}{Z\dot{R_m}^2}
 \newcommand{\Vol}{\mathrm{Vol} (X_5)}
 \newcommand{\PX}{P_{,X}}
 \newcommand{\phisq}{\frac{1}{2}\dot{\phi}^2}
