--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.38 2009/09/27 16:16:30 ith Exp $
+% $Id: multibrane.tex,v 1.39 2009/09/27 16:22:39 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.38 2009/09/27 16:16:30 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.39 2009/09/27 16:22:39 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -23,7 +23,7 @@
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
-
+\addtodo{Change!}
 Recently relativistic DBI inflation has come under considerable 
 pressure when confronted with cosmological observations.  
 Baumann \& McAllister (BM) and Lidsey \& Huston (LH) 
@@ -335,7 +335,7 @@ we find from \eq{eq:fnldefn-dbiintro} that
 \end{eqnarray}
 % 
 Hence substituting Eqs. (\ref{eq:consequence-multi}) and (\ref{eq:consequence3-multi}) 
-into the BM bound (\ref{eq:genBMbound}) and the LH bound (\ref{eq:LHbound})
+into the BM bound (\ref{eq:genBMbound}) and the bound (\ref{eq:LHbound})
 implies that
 %  
 \begin{equation}
@@ -405,7 +405,8 @@ results in a kinetic function satisfying $l \le 1/2$.
 
 We have seen how the form of the kinetic function
 $P$ can significantly change the
-strength of the LH bound on the tensor-scalar ratio, depending on its explicit
+strength of the bound in \eq{eq:LHbound} on the tensor-scalar ratio, depending
+on its explicit
 form. One model in which a suitable form for 
 $P$ is realised is the multiple coincident
 brane model as outlined by Thomas and Ward \cite{thomasward}.
@@ -1037,7 +1038,7 @@ c_sP_{,X} \simeq -1.3 \sqrt{1+(n-1)^2Y} \fnleq \,.
 % 
 
 
-We first consider the LH bound (\ref{eq:LHbound}). This applies at least for all
+We first consider the bound in \eq{eq:LHbound}. This applies at least for all
 UV scenarios. It follows after substitution of the relativistic limit
 (\ref{eq:rellimit-multi}) into the scalar perturbation amplitude,
 \eq{eq:Ps-dbiintro},
@@ -1059,8 +1060,9 @@ the warp factor during observable inflation:
 \frac{r^2 \Pr}{\fnleq} \,.
 \end{equation}
 % 
-Eqs. (\ref{eq:csPXlimit}) and (\ref{eq:warpfactor-multi}) may now be substituted into 
-the LH bound (\ref{eq:LHbound}) to yield
+Eqs. \eqref{eq:csPXlimit} and \eqref{eq:warpfactor-multi} may now be
+substituted into 
+the bound \eqref{eq:LHbound} to yield
 %  
 \begin{equation}
 \label{eq:actualLH-multi}
@@ -1208,7 +1210,8 @@ r_* < -\frac{5}{\Neff^2}
 \end{equation}
 %  
 Comparing the limits (\ref{eq:AdSupper-multi}) and (\ref{eq:bmadsbound}) 
-implies that the LH bound is stronger than the corresponding BM bound if  
+implies that the bound \eqref{eq:LHbound} is stronger than the corresponding BM
+bound \eqref{eq:genBMbound} if 
 % 
 \begin{equation}
 \label{eq:LHstrongerads}
@@ -1224,7 +1227,8 @@ and this condition is always satisfied if
 % 
 Moreover, the bound (\ref{eq:allNbound-multi}) will itself be satisfied for 
 all values of $\fnleq$ and $N$ if it is satisfied when the limits 
-$\fnleq =-151$ and $N=75852$ are imposed. Hence, we conclude that the LH bound 
+$\fnleq =-151$ and $N=75852$ are imposed. Hence, we conclude that the bound
+\eqref{eq:LHbound} 
 is stronger for $\Neff < 75$. 
 In general, it is difficult to quantify 
 the magnitude of $\Neff$ without 
@@ -1237,7 +1241,8 @@ $\Neff \lsim 60$. Nevertheless, if $N \ll 75852$, the bound
 $\Neff \gg 60$.  
 
 
-Finally, it should be emphasized that the derivation of the LH bound 
+Finally, it should be emphasized that the derivation of the bound in
+\eq{eq:LHbound} 
 underestimates the Planck mass by assuming that 
 the volume of the throat is much smaller 
 than the volume of the compactified Calabi-Yau 
