--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.39 2009/09/27 16:22:39 ith Exp $
+% $Id: multibrane.tex,v 1.40 2009/09/27 16:26:51 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.39 2009/09/27 16:22:39 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.40 2009/09/27 16:26:51 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -119,7 +119,7 @@ P (\varphi , X) = -T(\varphi ) \sqrt{1-2T^{-1}(\varphi ) X} + T(\varphi ) - V(\v
 % 
 where $T(\varphi ) = T_3 h^4 (\varphi )$ 
 is the warped brane tension and  $V(\varphi )$ is the 
-inflaton potential. The standard DBI scenario (\ref{eq:DBIkinetic}) is
+inflaton potential. The standard DBI scenario is
 algebraically special, 
 in the sense that the kinetic function satisfies the constraints 
 % 
