Added Gmeiner citation.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.43 2009/09/24 11:02:31 ith Exp $
+% $Id: dbi.tex,v 1.44 2009/09/27 17:17:36 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.43 2009/09/24 11:02:31 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.44 2009/09/27 17:17:36 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -998,10 +998,11 @@ in \eq{eq:upperbound} a similar analysis in this case leads to a second
 consistent lower bound. Thus there is no conflict as long as enough tensor
 modes are produced that both lower bounds are met. 
 % 
-Changing the geometry can also allow larger field ranges. By considering
+Changing the physical setting can also allow larger field ranges, for example
+by using different throat geometries \cite{Gmeiner:2007uw}. By considering
 D4-branes in compactified manifolds containing monodromies extremely large
 field ranges can be achieved. These lead to possibly observable tensor modes
-\cite{Silverstein:2008sg}.
+\cite{Silverstein:2008sg}. 
 
 
 The warped throat is six-dimensional so it is natural to consider the case when
