--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.44 2009/09/27 17:17:36 ith Exp $
+% $Id: dbi.tex,v 1.45 2009/09/27 17:18:17 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.44 2009/09/27 17:17:36 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.45 2009/09/27 17:18:17 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -998,8 +998,7 @@ in \eq{eq:upperbound} a similar analysis in this case leads to a second
 consistent lower bound. Thus there is no conflict as long as enough tensor
 modes are produced that both lower bounds are met. 
 % 
-Changing the physical setting can also allow larger field ranges, for example
-by using different throat geometries \cite{Gmeiner:2007uw}. By considering
+Changing the physical setting can also allow larger field ranges. By considering
 D4-branes in compactified manifolds containing monodromies extremely large
 field ranges can be achieved. These lead to possibly observable tensor modes
 \cite{Silverstein:2008sg}. 
