Fixed Grá's corrections to chapter.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.45 2009/09/27 17:18:17 ith Exp $
+% $Id: dbi.tex,v 1.46 2009/09/27 17:54:58 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.45 2009/09/27 17:18:17 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.46 2009/09/27 17:54:58 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -51,7 +51,7 @@ that are
 insensitive to the details of the throat geometry and the inflaton potential. 
 In general, there are two realizations of the scenario, 
 which are referred to as the ultra-violet (UV) and infra-red (IR) 
-versions, respectively. These are characterized by whether the brane is 
+versions. These are characterized respectively by whether the brane is 
 moving towards or away from the tip of the throat. 
 We focus initially on the UV scenario 
 and derive an upper bound on 
@@ -75,11 +75,11 @@ This is incompatible with the upper bound
 on $r$ when $1-n_s \simeq 0.03$, as inferred
 by the observations. 
 
-Hence, a reconciliation between theory and observation 
+Therefore a reconciliation between theory and observation 
 requires either a relaxation of the upper limit on $r$ or a blue 
 spectral index $(n_s >1)$. The DBI scenario would need 
 to be generalized in a suitable way for the upper bound on $r$
-to be weakened. We identify necessary conditions that a 
+to be weakened. Necessary conditions are identified that a 
 generalized action must satisfy for the BM constraint and the newly derived
 bound to be relaxed. 
 Such conditions are shown in Chapter~\ref{ch:multibrane} to be
@@ -352,7 +352,7 @@ over observable scales.
 We conclude, therefore, that \eq{eq:trapezium} 
 provides a sufficiently good estimate of the volume element  
 for a generic warp factor
-\footnote{As we shall see in the following Section, 
+\footnote{As we shall see in the following section, 
 even an order of magnitude error will make little 
 difference to our final conclusions.}.  
 % 
@@ -372,7 +372,8 @@ difference to our final conclusions.}.
 The analysis of the previous section 
 indicates that standard versions of UV DBI inflation generate a 
 tensor spectrum that is unobservably 
-small. Hence, $r=0$ can be assumed as a prior when discussing the WMAP5 data.
+small. Therefore, $r=0$ can be assumed as a prior when discussing the WMAP5
+data.
 However, in this case the data 
 disfavours a scale-invariant density spectrum at close to the $3 \sigma$ level
 ($2.78\sigma$)
@@ -383,7 +384,7 @@ is only marginally consistent with the data when $r\ne 0$ and $\alpha_s=0$.
 (The inferred upper limit is $n_s < 1.018$).
 Although the results from WMAP5 do allow for a blue spectrum if there is 
 significant negative running in the spectral index, we will 
-focus in this Section 
+focus in this section 
 on models that generate a red spectral index $n_s<1$, since these seem 
 to be preferred by the current data.   
 
@@ -555,7 +556,7 @@ Nonetheless, we emphasize that the upper bound (\ref{eq:upperbound})
 on the tensor modes 
 will also apply to any IR DBI model for which 
 $|\Delta \varphi_* | < \varphi_*$.  
-In view of the above discussion, therefore, 
+In view of the above discussion, 
 we will proceed in the following section
 to discuss a framework for generalizing the DBI scenario so 
 that the constraints on the tensor modes can be satisfied. 
@@ -678,10 +679,10 @@ On the other hand, the BM bound restricts the maximal
 variation of the scalar field $\varphi$ in the throat region. 
 This will be determined by expression (\ref{eq:BMbound-dbi}) 
 for generic warped geometries that are asymptotically 
-$AdS_5 \times X_5$ away from the tip of the throat. Moreover, 
+$AdS_5 \times X_5$ away from the tip of the throat. In addition, 
 if observable scales leave the horizon 
 while the brane is inside the throat, the change in the field value 
-must satisfy $| \Delta \varphi_*|<\varphi_{UV}$. Hence, it follows from   
+must satisfy $| \Delta \varphi_*|<\varphi_{UV}$. So it follows from   
 \eq{eq:approxlyth-dbiintro} that\footnote{We are 
 being conservative by restricting our discussion to the 
 observable phase of inflation. More generally, if 
@@ -954,7 +955,7 @@ next chapter.
 We have seen how the standard DBI model appears to be in conflict with
 observations. Many attempts have been made to modify the original scenario in
 order to evade these bounds. These can be classified mainly according to
-whether they involve single and multiple fields. 
+whether they involve single or multiple fields. 
 
 Single field models have the same single degree of freedom as DBI inflation but
 rely on other physical mechanisms to ease the bounds on $r$.
@@ -991,7 +992,8 @@ limited by WMAP5 \cite{Alabidi:2008ej}.
 % control. 
 
 Another interesting proposal is warped Wilson line DBI. Instead of the position
-of the brane being used as the inflaton, Wilson line moduli are turned on and
+of the brane being used as the inflaton, moduli fields associated with Wilson
+lines are turned on and
 take the role instead \cite{Avgoustidis:2008zu}. This scenario is T-dual to the
 standard DBI model with non-parallel branes. Instead of the upper bound on $r$
 in \eq{eq:upperbound} a similar analysis in this case leads to a second
